--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,8 @@
 body {
   margin-top: 20px;
 }
-.del {
+.del,
+.delz {
   float: right;
   /* margin-left: 30px; */
   /* display: inline-block; */
@@ -23,4 +24,7 @@ body {
 }
 .emergency {
   color: red;
+}
+#news {
+  font-size: 22px;
 }
